Base generator done

--- a/src/layout/body.html
+++ b/src/layout/body.html
@@ -1,11 +1,1 @@
-<main id="wrapper">
-    <h1>Hey, little butterfly !</h1>
-    <p>You're ready to code. It includes :</p>
-    <ul>
-        <li>Gulp</li>
-        <li>Backbone.js</li>
-        <li>Lodash.js</li>
-        <li>jQuery.js</li>
-        <li>Normalize.css</li>
-    </ul>
-</main>
+<main id="wrapper"></main>
