--- a/src/partials/root.html
+++ b/src/partials/root.html
@@ -7,6 +7,7 @@
     <li>Lodash.js</li>
     <li>jQuery.js</li>
     <li>Normalize.css</li>
+    <li>SwiftClick (No more 300ms tap delay)</li>
 </ul>
 
 <p>Open a terminal and run <code>gulp</code></p>
