Update touch hack

--- a/src/generators/backbone/base/src/layout/header.html
+++ b/src/generators/backbone/base/src/layout/header.html
@@ -7,4 +7,4 @@
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/main.css">
 </head>
-<body>
+<body ontouchstart="">
