Fix layout include

--- a/src/generators/webapp/base/src/partials/index.html
+++ b/src/generators/webapp/base/src/partials/index.html
@@ -1,4 +1,4 @@
-@@include('../layout/header.html')
+@@include('./src/layout/header.html')
 
 <main id="wrapper">
     <h1>Hey, little butterfly !</h1>
@@ -12,4 +12,4 @@
 
 </main>
 
-@@include('../layout/footer.html')
+@@include('./src/layout/footer.html')
